# fastapi-sqlalchemy

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.env
.github/workflows/: tests.yml
commands/: prod.run.sh  run.sh
src/: config.py  main.py
src/database/: connection.py  models.py
src/routes/: posts.py
src/schemas/: models.py
src/tests/: test_posts.py
src/utils/: post_crud.py
